<resources>
    <string name="app_name">City Simulator</string>
    <string name="authorName">Tao Hu</string>
    <string name="author">Author</string>
    <string name="stringColonString">%1$s: %2$s</string>
    <string name="setting">Setting</string>
    <string name="map">Map</string>
    <string name="mapWidth">Map Width</string>
    <string name="mapHeight">Map Height</string>
    <string name="initialMoney">Initial Money</string>
    <string name="familySize">Family Size</string>
    <string name="shopSize">Shop Size</string>
    <string name="salary">Salary</string>
    <string name="taxRate">Tax Rate</string>
    <string name="serviceCost">Service Cost</string>
    <string name="houseBuildingCost">House Building Cost</string>
    <string name="commonBuildingCost">Common Building Cost</string>
    <string name="roadBuildingCost">Road Building Cost</string>
    <string name="emptyEditTextErrorMessage">Input is empty!</string>
    <string name="btnVarUpdate">Update</string>
    <string name="errorIntInputInRange">Input must be in range from %1$d to %2$d</string>
    <string name="errorDoubleInputInRange">Input must be in range from %1$.2f to %2$.2f</string>
    <string name="btnResidential">Residential</string>
    <string name="btnCommercial">Commercial</string>
    <string name="btnRoad">Road</string>
    <string name="btnDemolish">Demolish</string>
    <string name="btnDetail">Detail</string>
    <string name="alreadyHaveBuilding">There is already a building!\nDemolish first</string>
    <string name="btnUpdateTime">Update Time</string>
    <string name="detailsRow">Row: %1$d</string>
    <string name="detailsCol">Col: %1$d</string>
    <string name="detailsStructureType">Structure Type: %1$s</string>
    <string name="detailsEditableName">Name: %1$s</string>
    <string name="btnUpdateStructureName">Update Structure Name</string>
    <string name="btnTakePhoto">Take Photo</string>
    <string name="noAdjacentRoad">This block does not have an adjacent road.\nCannot build here.</string>
    <string name="gameTime">Game Time</string>
    <string name="money">Money</string>
    <string name="recentIncome">Recent Income</string>
    <string name="population">Population</string>
    <string name="employmentRate">Employment Rate</string>
    <string name="temperature">Temperature</string>
    <string name="cityNameError">City does not exist, cannot retrieve temperature</string>
    <string name="cityName">City Name</string>
    <string name="continueSavedGame">Continue previous game ?</string>
    <string name="corruptedDataMsg">Incomplete database save\nCaused by killing activity before saving finishes\nNew map is generated</string>
    <string name="cannotAfford">Can not afford this item!</string>
    <string name="gameOver">Game Over!</string>
    <string name="connectionFailedMsg">Connection to weather server failed</string>
    <string name="httpNotOkMsg">Http request is not ok\nMost likely your city name is invalid</string>

</resources>