<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clStructureSelector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_dark"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/rvBuildingSelector">

        <Button
            android:id="@+id/btnResidential"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnResidential"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btnCommercial"
            style="@style/CompactButton"/>

        <Button
            android:id="@+id/btnCommercial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnCommercial"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/btnResidential"
            app:layout_constraintRight_toLeftOf="@id/btnRoad"
            style="@style/CompactButton"/>

        <Button
            android:id="@+id/btnRoad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnRoad"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/btnCommercial"
            style="@style/CompactButton"/>

        <Button
            android:id="@+id/btnDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnDetail"
            android:padding="8dp"
            android:layout_marginEnd="3dp"
            android:layout_marginRight="3dp"
            android:background="@drawable/rectangle_outline_top_bottom_fill_blue_light"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btnDemolish"
            style="@style/CompactButton"/>

        <Button
            android:id="@+id/btnDemolish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnDemolish"
            android:padding="8dp"
            android:layout_marginEnd="3dp"
            android:layout_marginRight="3dp"
            android:background="@drawable/rectangle_outline_top_bottom_fill_red_bright"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            style="@style/CompactButton"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_outline_top_bottom_fill_blue_dark"
        android:id="@+id/rvBuildingSelector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>